# jsc_cpu_fan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: jsc-cpu.desktop
resources/: jsc_cpu.qrc
src/: DetailPopup.cpp  DetailPopup.h  HwmonReader.cpp  HwmonReader.h  SensorModel.cpp  SensorModel.h  TrayController.cpp  TrayController.h  main.cpp
